attempted to fix dark mode

--- a/globals.css
+++ b/globals.css
@@ -18,7 +18,7 @@
        url('/assets/fonts/Inter-Bold.woff2') format('woff2'),
        url('/assets/fonts/Inter-Bold.woff') format('woff');
   font-weight: 700;
-  font-style: normal;
+  font-style: bold;
 }
 
 @font-face {
@@ -27,7 +27,7 @@
        url('/assets/fonts/Inter-SemiBold.woff2') format('woff2'),
        url('/assets/fonts/Inter-SemiBold.woff') format('woff');
   font-weight: 600;
-  font-style: normal;
+  font-style: semi-bold;
 }
 
 @font-face {
@@ -36,7 +36,7 @@
        url('/assets/fonts/Inter-Medium.woff2') format('woff2'),
        url('/assets/fonts/Inter-Medium.woff') format('woff');
   font-weight: 500;
-  font-style: normal;
+  font-style: medium;
 }
 
 @font-face {
@@ -45,5 +45,5 @@
        url('/assets/fonts/Inter-Light.woff2') format('woff2'),
        url('/assets/fonts/Inter-Light.woff') format('woff');
   font-weight: 300;
-  font-style: normal;
+  font-style: light;
 }
